--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Syften Feed</title>
+  <title>Syften AI Payments Feed</title>
   <style>
     body {
       font-family: "Segoe UI", sans-serif;
@@ -51,30 +51,46 @@
   </style>
 </head>
 <body>
-  <h1>Syften AI Payment Discussions Feed</h1>
+  <h1>Syften AI Payments Feed</h1>
   <div class="feed" id="feed"></div>
 
   <script>
+    const proxyUrl = "https://corsproxy.io/?";
+    const jsonFeedUrl = proxyUrl + encodeURIComponent("https://syften.com/rss/YXV0aF8zNjZlZTYyMGFmYTI0ZWEyNjUzOGVmYzhjZDI0ZDY3NTpUIaVVXNn2bViA8ZgTFEWrFhiQwiv_nAnORtrPCweHcQ==/json");
     const feedContainer = document.getElementById("feed");
-    const rssUrl = encodeURIComponent("https://syften.com/rss/YXV0aF8zNjZlZTYyMGFmYTI0ZWEyNjUzOGVmYzhjZDI0ZDY3NTpUIaVVXNn2bViA8ZgTFEWrFhiQwiv_nAnORtrPCweHcQ==/rss");
-    const apiUrl = `https://api.rss2json.com/v1/api.json?rss_url=${rssUrl}`;
-
-    fetch(apiUrl)
-      .then(res => res.json())
+    fetch(jsonFeedUrl)
+      .then(response => {
+        if (!response.ok) {
+          throw new Error(`HTTP error! status: ${response.status}`);
+        }
+        return response.json();
+      })
       .then(data => {
-        data.items.forEach(item => {
+        if (!Array.isArray(data.items)) {
+          throw new Error("Invalid feed format: 'items' array not found.");
+        }
+	console.log(data);
+        data.items.slice(0,20).forEach(item => {
           const div = document.createElement("div");
           div.className = "item";
+
+const d = new Date(item.date_published);
+const opts = { timeZone: "Etc/GMT+5", hour: "numeric", minute: "2-digit", hour12: true };
+const time = d.toLocaleTimeString("en-US", opts);
+const date = d.toLocaleDateString("en-US", { timeZone: "Etc/GMT+5", month: "numeric", day: "numeric", year: "2-digit" });
+
           div.innerHTML = `
-            <a href="${item.link}" target="_blank">${item.title}</a>
-            <p>${item.description || "No description available."}</p>
+            <a href="${item.url}" target="_blank" rel="noopener noreferrer">${item.title}</a>
+	    <b><p>${item.author.name || "No author available."}</p></b>
+            <p>${time}, ${date}</p>
+            <p>${item.summary || "No description available."}</p>
           `;
           feedContainer.appendChild(div);
         });
       })
-      .catch(err => {
-        feedContainer.innerHTML = "<p>Failed to load feed.</p>";
-        console.error("Feed error:", err);
+      .catch(error => {
+        feedContainer.innerHTML = `<p style="color: red;">Failed to load feed: ${error.message}</p>`;
+        console.error("Feed error:", error);
       });
   </script>
 </body>
