--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         for (const item of data.items) {
 	  if (seen.length >= 20) return;
 	  if (item.summary.indexOf("onlyfan") !== -1) continue;
+	  if (item.url.indexOf("dev.to") !== -1) continue;
           if (seen.includes(item.summary)) continue;
           seen.push(item.summary);
 
